[BACKLOG-40894] start-pentaho-debug.bat and start-pentaho-debug.sh missing JDK17 JDK_JAVA_OPTIONS --add-opens